overlays/development/linux/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target $1
spec:
  rules:
    - host: foss-fund.ospo.library.jhu.edu
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: http-test-svc
                port:
                  number: 80
          - path: /meh
            pathType: Prefix
            backend:
              service:
                name: shib-sp-svc
                port:
                  number: 8091
